# laser_control

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile.am  README.md  ReadMe.txt  Simulation.py  configure  configure.ac  copy_to_Z.bat  getHolodeckEnum.py  make_win.bat  replay_log.py  tracking_relay.py
MarkerTracking/: CMakeLists.txt  README.md  main.cpp
MarkerTracking/CMakeModules/: FindAlvar.cmake  FindBonjour.cmake
MarkerTracking/src/: AlvarTracking.cpp  AlvarTracking.h  BonjourRegistration.cpp  BonjourRegistration.h  Common.cpp  Common.h  ForwardDeclarations.h  FrameGrabber.cpp  FrameGrabber.h  Marker.cpp  Marker.h  MarkerTracking.cpp  MarkerTracking.h  MarkerTrackingDetail.cpp  MarkerTrackingDetail.h  NetworkServer.cpp  NetworkServer.h  NetworkServerDetail.cpp  NetworkServerDetail.h  util.hpp
UnityBootCamp_OculusRift/Assets/CutsceneAnimations/: heli_rapel_cutscene.anim
UnityBootCamp_OculusRift/Assets/Materials/Buildings/: alphas.mat  alphas_2-industry_far_view.mat  alphas_2-sided.mat  buildings_a.mat  buildings_b.mat  buildings_e.mat
UnityBootCamp_OculusRift/Assets/Materials/Misc/: alpha_cancel.mat  glassMaterial.mat  grenade.mat  light_glow.mat  plastic_a.mat  radar_map_arrow.mat  radar_map_forest.mat  radar_map_point.mat  rope-07 - default.mat  waterfall.mat
UnityBootCamp_OculusRift/Assets/Materials/Soldier/: unity_pilot_body_01_dif.mat  unity_pilot_head_01_dif.mat  unity_soldier_body_dif_wip.mat  unity_soldier_head_dif_01.mat
UnityBootCamp_OculusRift/Assets/Materials/Trees/: bark_1.mat  bark_3.mat  bark_5.mat  branches_1.mat  branches_3.mat  branches_4.mat  branches_5.mat  far_trees.mat  leaves_10.mat  leaves_5.mat  leaves_6.mat  leaves_9.mat
UnityBootCamp_OculusRift/Assets/Materials/assets/: archive_a.mat  archive_d.mat  barrel_a.mat  barrel_b.mat  barrel_c.mat  barrel_d.mat  black_board.mat  boot.mat  cardboard_box_a.mat  cardboard_box_b.mat  chair.mat  concrete_brick.mat  desk_b.mat  fence.mat  garbage_bag_black.mat  garbage_bag_blue.mat  ink_can.mat  pipes.mat  pole.mat  porta_a.mat  porta_b.mat  static_objects.mat  tire_a.mat  tire_b.mat  wood_crate.mat  wood_frame.mat
UnityBootCamp_OculusRift/Assets/Materials/decals/: decalsA.mat  decalsA_cutout.mat  decalsB.mat  decalsB_cutout.mat
UnityBootCamp_OculusRift/Assets/Materials/particles/: BulletMarks.mat  breaking_glass.mat  bright_fire.mat  bullet_trace.mat  bullets.mat  concreto_1.mat  concreto_2.mat  concreto_4.mat  concreto_5.mat  dirt_explosion.mat  dirt_explosion_2.mat  explosion.mat  faisca1.mat  faisca2.mat  faisca3.mat  faisca4.mat  faisca5.mat  flying_paper 3.mat  flying_paper.mat  fogo.mat  fumaca 1.mat  fumaca 2.mat  fumaca 3.mat  fumaca.mat  granade_smoke.mat  leaves.mat  madeira_3.mat  madeira_5.mat  particula_madeira 1.mat  particula_madeira.mat  smoke.mat  smoke_dirt.mat  smoke_explosion.mat  spark.mat  stone_1.mat  target.mat  water_foam.mat  water_splash.mat  water_splash2.mat  waterfall.mat
UnityBootCamp_OculusRift/Assets/Materials/skybox/: forest_skybox.mat
UnityBootCamp_OculusRift/Assets/OVR/Prefabs/: OVRCameraController.prefab  OVRPlayerController.prefab
UnityBootCamp_OculusRift/Assets/Prefabs/Misc/: bird.prefab  boundary.prefab  lightFlare.prefab  light_glow_2.prefab
UnityBootCamp_OculusRift/Assets/Prefabs/Trees/: pine1.prefab  tree_high_b.prefab  tree_high_d.prefab  tree_small_d.prefab  tree_small_e.prefab
UnityBootCamp_OculusRift/Assets/Prefabs/assets/: barbed_wire.prefab  (+94 more)
UnityBootCamp_OculusRift/Assets/Pro Standard Assets/: Samples.unity
UnityBootCamp_OculusRift/ProjectSettings/: ProjectSettings.asset  TagManager.asset
alvar/marker creator/: samplemarkercreator
cmake/Modules/: FindJsoncpp.cmake
ilda_parser/: Makefile  generate_laser_object.py  parser.py  pytherdream.py  renderer.py
pysrc/: SvgLoader.py  demo.py  motive.py  obj.py  parser.py  path2polygon.py  point.py  pytherdream.py  renderer.py  requirements.txt
pysrc/sip/: dtf.py
pysrc/svg/: path2polygon.py
pysrc/svg_load/: SvgLoader.py  path2polygon.py
src/: Animation.cpp  Animation.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Circle.cpp  Circle.h  Color.cpp  Color.h  CompositeObject.cpp  CompositeObject.h  Config.cpp  Config.h  DllExport.h  EtherdreamWrapper.cpp  EtherdreamWrapper.h  LaserCircle.cpp  LaserCircle.h  LaserCompositeObject.cpp  LaserCompositeObject.h  LaserLine.cpp  LaserLine.h  LaserObject.cpp  LaserObject.h  LaserPainter.cpp  LaserPainter.h  LaserPolygon.cpp  LaserPolygon.h  LaserRectangle.cpp  LaserRectangle.h  LaserServer.cpp  LaserServer.h  Line.cpp  Line.h  Object.cpp  Object.h  ObjectSorting.cpp  ObjectSorting.h  Painter.cpp  Painter.h  (+22 more)
src/animations/: Animation.cpp  Animation.h
src/etherdream/driver-unix/: etherdream.c
src/etherdream/driver-win/: comm.cpp  dac.cpp  dac.h  j4cDAC.cpp  j4cDAC.h
src/holodeck/: Application.cpp  Application.h  Instruction.cpp  Instruction.h  InstructionCaller.h  InstructionFactory.cpp  InstructionFactory.h  InstructionOptions.cpp  InstructionOptions.h  Server.cpp  Server.h  main.cpp
src/laser_calibration/: AbstractCalibration.cpp  AbstractCalibration.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationRectangle.cpp  CalibrationRectangle.h  DistortionCalibration.cpp  DistortionCalibration.h  EtherdreamWrapper.cpp  EtherdreamWrapper.h  ManualCornerCalibration.cpp  ManualCornerCalibration.h  PlanarCalibration.cpp  PlanarCalibration.h  PointLifter.cpp  PointLifter.h  main.cpp
src/laser_calibration/etherdream/common/: protocol.h
src/laser_wrapper/: test.cpp
src/objects/: Circle.cpp  Circle.h  CompositeObject.cpp  CompositeObject.h  GenObject.cpp  GenObject.h  Line.cpp  Line.h  Object.cpp  Object.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  RisenGroup.cpp  RisenGroup.h  Spiral.cpp  Spiral.h  Wave.cpp
src/utils/: ObjectFlattening.cpp  ObjectFlattening.h  ObjectSorting.cpp  Point.cpp  Point.h  Transform.cpp  Transform.h  laser_utilities.h  path2polygon.py
svgToPointPolygon/: index.html  polygonConverter.css  polygonConverter.js
unity_scripts/: MarkerTracking.cs  Movement.cs  TrackingCalibration.cs
(+140 files in other folders)
